--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,16 @@
 {% endblock %}
 
 {% block body %}
-    <h2>Login to Book a Fly8!</h2>
-    <img src="content/logo_project.png">
+
+    <p>Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis.
+        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis.</p>
+    <p>Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis.
+        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis.</p>
+    <p>Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis.
+        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis.</p>
+
+
+    <h2><a href="{{ url_for('login') }}">Login</a> or <a href="{{ url_for('register') }}">Register</a> to Book a Fly8!</h2>
+
 {% endblock %}
 
