--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>FLY8 - Booking has never been so easy!</title>
-        <link rel="stylesheet" href="/workspace/project1/static/style.css">
+        <title>sNk Bookstore</title>
+        <link rel="stylesheet" href="/static/style.css">
+        <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     </head>
     <body>
         <nav>
             <div class="nav-logo">
                 <a href="{{ url_for('index') }}">
-                    <img src="https://github.com/feecarvalho/project1/blob/master/content/logo_project.png?raw=true" alt="Fly8 Logo" width="240" height="70">
+                    <img src="/static/snk_logo.png" alt="snk-bookstore">
                 </a>
         </nav>
         <h1>{% block heading %}{% endblock %}</h1>
