--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block heading %}
-    Login now to Book your flight!
+    Login now to check our collection!
 {% endblock %}
 
 {% block body %}
