--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,29 @@
 {% extends "layout.html" %}
 
 {% block heading %}
-    Welcome to Fly8
+    Welcome to sNk Bookstore!
 {% endblock %}
 
 {% block body %}
-
+{{ message }}
     <p>Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis.
-        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis.</p>
+        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis.
+        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis.
+        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis.
+        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis</p>
     <p>Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis.
-        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis.</p>
+        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis.
+        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis.
+        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis.
+        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis</p>
     <p>Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis.
-        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis.</p>
+        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis.
+        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis.
+        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis</p>
 
 
-    <h2><a href="{{ url_for('login') }}">Login</a> or <a href="{{ url_for('register') }}">Register</a> to Book a Fly8!</h2>
-
+    {% if not connection %}
+    <h2><a href="{{ url_for('login') }}">Login</a> or <a href="{{ url_for('register') }}">Register</a> to check our books colleciton!</h2>
+    {% endif %}
 {% endblock %}
 
