--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>sNk Bookstore</title>
         <link rel="stylesheet" href="/static/style.css">
-        <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     </head>
     <body>
         <nav>
@@ -12,6 +12,17 @@
                 <a href="{{ url_for('index') }}">
                     <img src="/static/snk_logo.png" alt="snk-bookstore">
                 </a>
+                <ul class="nav-menu">
+                    <li><a href="{{ url_for('index') }}">Home</a></li>
+                    <li><a href="{{ url_for('register') }}">Register</a></li>
+                    <li><a href="#">Search</a></li>
+                    {% if status == "loggedin" or session['logged_in'] %}
+                    <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                    {% else %}
+                    <li><a href="{{ url_for('login') }}">Login</a></li>
+                    {% endif %}
+                </ul>
+            </div>
         </nav>
         <h1>{% block heading %}{% endblock %}</h1>
 
