--- a/templates/logout.html
+++ b/templates/logout.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block heading %}
-    Login now to Book your flight!
+    Logout successfully.
 {% endblock %}
 
 {% block body %}
