--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,8 @@
 {% endblock %}
 
 {% block body %}
+    {{ message }}
+
     <form action="{{ url_for('login') }}" method="POST">
         <input type="text" name="username" placeholder="Username">
         <input type="password" name="password" placeholder="Password">
