--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 
 {% block heading %}
-    {% if session['username'] != None %}
-        Hello, {{session['username']}} welcome to sNk Bookstore!
+    {% if session["username"] %}
+        Hello {{session["username"]}}, welcome to sNk Bookstore!
     {% else %}
         Hello, welcome to sNk Bookstore!
     {% endif %}
