--- a/templates/register.html
+++ b/templates/register.html
@@ -9,6 +9,8 @@
     {{ message }}
 
     <form action="{{ url_for('register') }}" method="POST">
+        <input type="text" name="firstname" placeholder="Enter your first name">
+        <input type="text" name="lastname" placeholder="Enter your last name">
         <input type="text" name="username" placeholder="Enter your username">
         <input type="password" name="pass1" placeholder="Create a password">
         <input type="password" name="pass2" placeholder="Repeate your password">
