--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,7 @@
         <title>sNk Bookstore</title>
         <link rel="stylesheet" href="/static/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+        <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
     </head>
     <body>
         <nav>
@@ -14,11 +15,11 @@
                 </a>
                 <ul class="nav-menu">
                     <li><a href="{{ url_for('index') }}">Home</a></li>
-                    <li><a href="{{ url_for('register') }}">Register</a></li>
                     {% if status == "loggedin" or session['logged_in'] %}
                     <li><a href="{{ url_for('search') }}">Search</a></li>
                     <li><a href="{{ url_for('logout') }}">Logout</a></li>
                     {% else %}
+                    <li><a href="{{ url_for('register') }}">Register</a></li>
                     <li><a href="{{ url_for('login') }}">Login</a></li>
                     {% endif %}
 
