--- a/static/style.css
+++ b/static/style.css
@@ -12,3 +12,41 @@ nav {
     display: inline-block;
     height: 80px;
 }
+
+.rating-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
+    direction: rtl;
+}
+
+.rating-box a {
+    font-size: 30px;
+    color: #131313;
+    transition: 0.3s all;
+}
+
+.rating-box a:hover {
+    color: #f1c40f;
+}
+
+.star1:hover ~ a {
+    color: #f1c40f;
+}
+
+.star2:hover ~ a {
+    color: #f1c40f;
+}
+
+.star3:hover ~ a {
+    color: #f1c40f;
+}
+
+.star4:hover ~ a {
+    color: #f1c40f;
+}
+
+.star5:hover ~ a {
+    color: #f1c40f;
+}
