--- a/static/style.css
+++ b/static/style.css
@@ -13,40 +13,82 @@ nav {
     height: 80px;
 }
 
-.rating-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%)
-    direction: rtl;
+.nav-menu {
+    text-transform: uppercase;
 }
 
-.rating-box a {
-    font-size: 30px;
-    color: #131313;
-    transition: 0.3s all;
+@import url(https://fonts.googleapis.com/css?family=Roboto:500,100,300,700,400);
+div.stars{
+  width: 270px;
+  display: inline-block;
 }
 
-.rating-box a:hover {
-    color: #f1c40f;
+input.star{
+  display: none;
 }
 
-.star1:hover ~ a {
-    color: #f1c40f;
+label.star {
+  float: right;
+  padding: 10px;
+  font-size: 36px;
+  color: #444;
+  transition: all .2s;
 }
 
-.star2:hover ~ a {
-    color: #f1c40f;
+input.star:checked ~ label.star:before {
+  content:'\f005';
+  color: #FD4;
+  transition: all .25s;
 }
 
-.star3:hover ~ a {
-    color: #f1c40f;
+
+input.star-5:checked ~ label.star:before {
+  color:#FE7;
+  text-shadow: 0 0 20px #952;
 }
 
-.star4:hover ~ a {
-    color: #f1c40f;
+input.star-1:checked ~ label.star:before {
+  color: #F62;
 }
 
-.star5:hover ~ a {
-    color: #f1c40f;
+label.star:hover{
+  transform: rotate(-15deg) scale(1.3);
+}
+
+label.star:before{
+  content:'\f006';
+  font-family: FontAwesome;
+}
+
+.rev-box{
+  overflow: hidden;
+  height: 0;
+  width: 100%;
+  transition: all .25s;
+}
+
+textarea.review{
+  background: #222;
+  border: none;
+  width: 100%;
+  max-width: 100%;
+  height: 100px;
+  padding: 10px;
+  box-sizing: border-box;
+  color: #EEE;
+}
+
+label.review{
+  display: block;
+  transition:opacity .25s;
+}
+
+input.star:checked ~ .rev-box{
+  height: 125px;
+  overflow: visible;
+}
+
+#comment-box {
+    height: 120px;
+    width: 300px;
 }
