--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 
 {% block heading %}
-    {% if session["username"] %}
-        Hello {{session["username"]}}, welcome to sNk Bookstore!
+    {% if show_name %}
+        Hello {{ show_name }}, welcome to sNk Bookstore!
     {% else %}
         Hello, welcome to sNk Bookstore!
     {% endif %}
