--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
         <title>sNk Bookstore</title>
         <link rel="stylesheet" href="/static/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-        <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     </head>
     <body>
         <nav>
