--- a/templates/book.html
+++ b/templates/book.html
@@ -30,29 +30,40 @@
                 <li>{{ info }}</li>
             {% endfor %}
         </ul>
+        {% if res %}
+            Goodreads avaliation:
+            {{ res.average_rating }}
+        {% endif %}
 
             <div class="stars">
                 <form action="{{ url_for('review', isbn_id = sel_book[0]) }}" id="comment-box" method="POST">
                     <spam>Rate this book!</spam>
-                    <input class="star star-5" id="star-5" type="radio" name="star" value='1'>
-                    <label class="star star-5" for="star-5"></label>
-                    <input class="star star-4" id="star-4" type="radio" name="star" value='2'>
-                    <label class="star star-4" for="star-4"></label>
-                    <input class="star star-3" id="star-3" type="radio" name="star" value='3'>
-                    <label class="star star-3" for="star-3"></label>
-                    <input class="star star-2" id="star-2" type="radio" name="star" value='4'>
-                    <label class="star star-2" for="star-2"></label>
                     <input class="star star-1" id="star-1" type="radio" name="star" value='5'>
                     <label class="star star-1" for="star-1"></label>
+                    <input class="star star-2" id="star-2" type="radio" name="star" value='4'>
+                    <label class="star star-2" for="star-2"></label>
+                    <input class="star star-3" id="star-3" type="radio" name="star" value='3'>
+                    <label class="star star-3" for="star-3"></label>
+                    <input class="star star-4" id="star-4" type="radio" name="star" value='2'>
+                    <label class="star star-4" for="star-4"></label>
+                    <input class="star star-5" id="star-5" type="radio" name="star" value='1'>
+                    <label class="star star-5" for="star-5"></label>
                     <textarea name="comment"> Enter your review here...</textarea>
                     <button>Submit review!</button>
                 </form>
             </div>
     {% endif %}
 
+    {% if res %}
+        {{ res.average_rating }}
+    {% endif %}
     {% if review_list %}
         {% for review in review_list %}
-            <spam>{{ review }}</spam>
+            <div class="review-infos">
+                <p>Rating: {{ review.rating}}</p>
+                <p>Comment: {{review.review}} </p>
+                <p>Author: {{review.first_name}} {{review.last_name}}</p>
+            </div>
         {% endfor %}
     {% endif %}
 
