--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block heading %}
-    {% if session['username'] %}
+    {% if session['logged_in'] %}
         Hello {{ session['displayname'] }}, welcome to sNk Bookstore!
     {% else %}
         Hello, welcome to sNk Bookstore!
@@ -27,7 +27,7 @@
 
 
     {% if not session['logged_in'] %}
-    <h2><a href="{{ url_for('login') }}">Login</a> or <a href="{{ url_for('register') }}">Register</a> to check our books collection!</h2>
+        <h2><a href="{{ url_for('login') }}">Login</a> or <a href="{{ url_for('register') }}">Register</a> to check our books reviews!</h2>
     {% endif %}
 {% endblock %}
 
